Added support for snippet bookmarks (#55)